<resources>
    <string name="app_name">Quiz-App-EquipoA</string>

    <!--Strings Pantalla de inicio-->
    <string name="txt_TxtQuiz">QuizManiatics</string>
    <string name="btn_Modalidad">Modalidad</string>
    <string name="btn_Iniciar">Iniciar</string>
    <string name="title_activity_pref_modalidad">Pref_modalidad</string>

    <!-- Strings Preferencias de Usuario -->
    <!-- Preference Titles -->
    <string name="messages_header1">Selecciona la Modalidad</string>
    <string name="messages_header2">Fuente</string>
    <string name="sync_header">Sync</string>

    <!-- Categoria Modalidad -->
    <string name="signature_title1"></string>
    <string name="reply_titleModalidad">Modalidad</string>

    <!-- Categoria de Fuente -->
    <string name="signature_title2"></string>
    <string name="reply_titleModalidadFuente">Fuentes</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--Strings Preguntas-->
    <string name="btn_siguiente1">Siguiente</string>
    <string name="btn_siguiente2">Siguiente</string>
    <string name="btn_siguiente3">Siguiente</string>
    <string name="btn_siguiente4">Siguiente</string>
    <string name="btn_siguiente5">Siguiente</string>

    /*Resultados*/
    <string name="txt_6">Tus respuestas</string>
    <string name="txt_P1">Pregunta 1:</string>
    <string name="txt_P2">Pregunta 2:</string>
    <string name="txt_P3">Pregunta 3:</string>
    <string name="txt_P4">Pregunta 4:</string>
    <string name="txt_P5">Pregunta 5:</string>
    <string name="txt_7">Tu calificación</string>
    <string name="txt_res"></string>

</resources>