<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- Categoria Modalidad -->
    <PreferenceCategory app:title="@string/messages_header1">
        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entriesModalidad"
            app:entryValues="@array/reply_valuesModalidad"
            app:key="reply_Modalidad"
            app:title="@string/reply_titleModalidad"
            app:useSimpleSummaryProvider="true" />
            app:
    </PreferenceCategory>

    <!-- Categoria de Fuente -->
    <PreferenceCategory app:title="@string/messages_header2">
        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entriesFuente"
            app:entryValues="@array/reply_valuesFuente"
            app:key="reply_Fuente"
            app:title="@string/reply_titleModalidadFuente"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>